# NanoPC

./: .gitignore  CMakeLists.txt  ReadMe.adoc
headers/: core.h  font.h  gui-graphdisplay.h  gui-object.h  gui_sdl.h  guibase.h  guigraphdisplay.h  spi.h  ui.h  uincurses.h
src/: core.cpp  gui_sdl.cpp  guibase.cpp  main.cpp  spi.cpp  ui.cpp  uincurses.cpp
src/sdl/: guigraphdisplay.cpp
test/: test.cpp
